Adds java sources to gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,19 @@ compileTestJava {
     options.encoding = 'UTF-8'
 }
 
+java {
+	withSourcesJar()
+	withJavadocJar()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+		from components.java
+        }
+    }
+}
+
 test {
     exclude 'de/schildbach/pte/live/**'
 }
